Make player count bubbles slightly bigger to fix text alignment issues.

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -953,7 +953,7 @@ form{
 				border-radius: 50%;
 				width: 16px;
 				height: 16px;
-				padding: 0.2rem;
+				padding: 0.4rem;
 				font-size: 70%;
 				font-weight: 400;
 				color: $primary-dark;
